<resources>
    <string name="account">Account</string>
    <string name="payment_method">Payment Method</string>
    <string name="contributor">Contributor</string>
    <string name="dialog_title_select_to_edit">Select to edit</string>
    <string name="dialog_title_error_deleting_item">Deleting %1$s</string>
    <string name="dialog_title_deleting_contributor">Deleting contributor</string>
    <string name="dialog_title_deleting_account">Deleting account</string>
    <string name="dialog_title_deleting_payment_method">Deleting payment method</string>
    <string name="dialog_title_deleting_category">Deleting category</string>
    <string name="app_name">IncomeExpense</string>
    <string name="action_settings">Settings</string>
    <string name="action_contributors">Contributors</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_payment_methods">Payment Methods</string>
    <string name="action_categories">Categories</string>
    <string name="action_utility">Utility</string>
    <string name="error_unable_to_fetch_all_contributor">Unable to fetch all contributor.</string>
    <string name="error_unable_to_fetch_all_category">Unable to fetch all category.</string>
    <string name="error_unable_to_fetch_all_account">Unable to fetch all account.</string>
    <string name="error_foreign_key_constraint">Unable to delete %1$s : %2$s, it\'s in use.</string>
    <string name="error_foreign_key_constraint_contributor1">Unable to delete this contributor</string>
    <string name="error_foreign_key_constraint_contributor2">In use in Accounts</string>
    <string name="error_foreign_key_constraint_contributor3">In use in Payment Methods</string>
    <string name="dialog_title_contributor_setter">Contributor Setter</string>
    <string name="dialog_title_category_setter">Category Setter</string>
    <string name="dialog_title_pick_an_account">Select An Account</string>
    <string name="button_label_ok">Ok</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="title_contributor_list">Contributors</string>
    <string name="title_contributor_editor">Contributor</string>
    <string name="title_contributor_editor_add">Add Contributor</string>
    <string name="title_contributor_editor_update">Update Contributor</string>
    <string name="title_account_list">Accounts</string>
    <string name="title_account_editor">Account</string>
    <string name="title_account_editor_add">Add Account</string>
    <string name="title_account_editor_update">Update Account</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="title_settings">Settings</string>
    <string name="title_payment_method_editor_add">Payment Method Account</string>
    <string name="title_payment_method_editor_update">Payment Method Account</string>
    <string name="title_payment_method_list">Payment Methods</string>
    <string name="title_payment_method_editor">Payment Method</string>
    <string name="title_category_list">Categories</string>
    <string name="title_category_editor">Categories</string>
    <string name="title_category_editor_add">Add Category</string>
    <string name="title_category_editor_update">Update Category</string>
    <string name="title_transaction_editor">Transactions</string>
    <string name="title_take_photo">Take A Photo</string>
    <string name="title_transaction_editor_add">Add Transaction</string>
    <string name="title_transaction_editor_update">Update Transaction</string>
    <string name="title_transaction_editor_add_income">Add Income Transaction</string>
    <string name="title_transaction_editor_update_income">Update Income Transaction</string>
    <string name="title_transaction_editor_add_expense">Add Expense Transaction</string>
    <string name="title_transaction_editor_update_expense">Update Expense Transaction</string>
    <string name="title_today">Today</string>
    <string name="title_this_week">This Week</string>
    <string name="title_this_month">This Month</string>
    <string name="title_this_year">This Year</string>
    <string name="title_last_year">Last Year</string>
    <string name="title_income">Income</string>
    <string name="title_expense">Expense</string>
    <string name="title_transaction_list">Transactions</string>
    <string name="title_utility">Utility</string>
    <string name="title_reorder">Reorder</string>
    <string name="title_global_tab">All</string>
    <string name="title_add_new">Add New</string>
    <string name="text_add_expense">Add Expense</string>
    <string name="text_add_income">Add Income</string>
    <string name="text_add_category">Add Category</string>
    <string name="text_update_category">Update Category</string>
    <string name="message_contributor_no_data">No Contributor Available.</string>
    <string name="message_account_no_data">No Account Available.</string>
    <string name="message_payment_method_no_data">No Payment Method Available.</string>
    <string name="message_transaction_no_data">No Transaction Available.</string>
    <string name="message_category_no_data">No Category Available.</string>
    <string name="label_account">Account:</string>
    <string name="label_name">Name:</string>
    <string name="label_name2">Name</string>
    <string name="label_currency">Currency:</string>
    <string name="label_currency2">Currency</string>
    <string name="label_contributors">Contributors</string>
    <string name="label_exchange_rate">Exchange Rate:</string>
    <string name="label_exchange_rate2">Exchange Rate</string>
    <string name="label_budget">Budget:</string>
    <string name="label_budget2">Budget</string>
    <string name="label_owner">Owner:</string>
    <string name="label_owner2">Owner</string>
    <string name="label_date">Date:</string>
    <string name="label_amount">Amount:</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_category">Category</string>
    <string name="label_note">Note</string>
    <string name="label_qty_liters">Qty liters:</string>
    <string name="label_cost_liters">Cost liters:</string>
    <string name="label_extension_type">Extension Type</string>
    <string name="label_position">Position</string>
    <string name="label_account_type">Type:</string>
    <string name="label_marchand">Marchand</string>
    <string name="hint_contributor_name">Contributor name</string>
    <string name="hint_account_name">Account name</string>
    <string name="hint_payment_method_name">Payment Method name</string>
    <string name="hint_enter_category">Enter Category</string>
    <string name="hint_enter_sub_category">Enter Sub Category</string>
    <string name="hint_account_budget">Enter Budget Amount</string>
    <string name="hint_category_name">Category name</string>
    <string name="button_label_delete">Delete</string>
    <string name="button_label_save">Save</string>
    <string name="button_label_back">Cancel</string>
    <string name="button_add_category">Add Category</string>
    <string name="button_label_add_new">Add New</string>
    <string name="validation_currency_mandatory">No currency selected</string>
    <string name="validation_name_already_exists">Name already exists</string>
    <string name="validation_name_mandatory">Name is mandatory</string>
    <string name="validation_exchange_rate_mandatory">Exchange rate must be greater than 0</string>
    <string name="validation_group_mandatory">Group is mandatory</string>
    <string name="validation_category_mandatory">No category selected</string>
    <string name="validation_sub_categories_mandatory">Sub categories are mandatory</string>
    <string name="validation_account_mandatory">No account selected</string>
    <string name="validation_sub_category_mandatory">No sub-category selected</string>
    <string name="validation_type_mandatory">No type selected</string>
    <string name="validation_date_mandatory">No date selected</string>
    <string name="validation_amount_mandatory">No amount selected</string>
    <string name="validation_payment_method_mandatory">No payment method selected</string>
    <string name="validation_budget_must_be_positive">Budget amount must be positive</string>
    <string name="validation_contributors_mandatory">No contributor selected</string>
    <string name="validation_category_duplicate">Duplicate category name found</string>
    <string name="validation_remove_contributor_from_account">Unable to remove contributor %1$s from account, it\'s in use.</string>
    <string name="validation_remove_category_in_use">Unable to remove category, it\'s in use.</string>
    <string name="validation_remove_category_from_account">Unable to remove category %1$s from account, it\'s in use.</string>
    <string name="log_error_adding_item">Error adding item</string>
    <string name="log_error_deleting_item">Error deleting item</string>
    <string name="log_error_updating_item">Error updating item</string>
    <string name="log_info_adding_item">Adding %1$s.</string>
    <string name="log_info_added_item">Number of %1$s added \'%2$d\', id \'%3$d\'.</string>
    <string name="log_info_deleting_item">Deleting %1$s \'%2$d\'.</string>
    <string name="log_info_deleted_item">Number of %1$s deleted \'%2$d\', id \'%3$d\'.</string>
    <string name="log_info_updating_item">Updating %1$s \'%2$d\'.</string>
    <string name="log_info_updated_item">Number of %1$s updated \'%2$d\', id \'%3$d\'.</string>
    <string name="log_info_number_deleted_account">Number of deleted account %1$d</string>
    <string name="log_info_deleting_account">Deleting account with id \'%1$s\'</string>
    <string name="log_info_number_deleted_associated_contributor">Associated contributor deleted : %1$d</string>
    <string name="log_info_number_added_associated_contributor">Associated contributor added : %1$d"</string>
    <string name="log_info_number_deleted_associated_category">Associated category deleted : %1$d</string>
    <string name="log_info_number_added_associated_category">Associated category added : %1$d"</string>
    <string name="log_info_updating_account">Updating account with id \'%1$s\'</string>
    <string name="log_info_number_updated_account">Number of updated account %1$d</string>
    <string name="pref_currency_label">Default Currency</string>
    <string name="pref_default_currency_key" translatable="false">default_currency</string>
    <string name="pref_CAD_currency" translatable="false">CAD</string>
    <string name="pref_USD_currency" translatable="false">USD</string>
    <string name="pref_EUR_currency" translatable="false">EUR</string>
    <string name="account_active">Account Active</string>
    <string name="account_close">Account Close</string>
    <string name="account_display_last_year_data">Display Last Year Data</string>
    <string name="account_not_display_last_year_data">Do Not Display Last Year Data</string>
    <string name="text_view_account">Account</string>
    <string name="text_view_category">Category</string>
    <string name="text_view_type">Type</string>
    <string name="text_view_date">Date</string>
    <string name="text_view_amount">Amount</string>
    <string name="text_view_currency">Currency</string>
    <string name="text_view_exchange_rate">Exchange Rate</string>
    <string name="text_view_payment_method">Payment Method</string>
    <string name="text_view_note">Note</string>
    <string name="radio_button_expense">Expense</string>
    <string name="radio_button_income">Income</string>
    <string name="ask_delete_contributor">Do you really want to delete this contributor?</string>
    <string name="ask_delete_account">Do you really want to delete this account?</string>
    <string name="ask_delete_payment_method">Do you really want to delete this payment method?</string>
    <string name="ask_delete_category">Do you really want to delete this category?</string>
</resources>