<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mg.incomeexpense.MainActivity">
    <item
        android:id="@+id/action_contributors"
        android:orderInCategory="100"
        android:title="@string/action_contributors"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="200"
        android:title="@string/action_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_payment_methods"
        android:orderInCategory="300"
        android:title="@string/action_payment_methods"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_utility"
        android:orderInCategory="450"
        android:title="@string/action_utility"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
