<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mg.incomeexpense.MainActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/title_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/title_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_take_photo"
        android:orderInCategory="300"
        android:icon="@drawable/ic_add_a_photo_white_24dp"
        android:title="@string/title_take_photo"
        app:showAsAction="always" />

</menu>
