<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView android:layout_width="fill_parent" android:id="@+id/textViewValidationErrorMessage"
            style="@style/ErrorBoxStyle"
            android:visibility="gone"/>

        <TextView
            style="@style/editor_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"/>

        <EditText
            android:id="@+id/edittext_payment_method_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_payment_method_name"
            android:inputType="text|textNoSuggestions"
            android:imeOptions="actionGo"
            />

        <TextView
            style="@style/editor_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_currency"/>

        <Spinner android:id="@+id/spinner_currency"
            android:layout_width="fill_parent" android:layout_height="wrap_content"/>

        <TextView
            style="@style/editor_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exchange_rate"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_exchange_rate"
            android:hint="exchange rate"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/editor_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_owner"/>

        <Spinner android:id="@+id/spinner_owner"
            android:layout_width="fill_parent" android:layout_height="wrap_content"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Switch"
            android:id="@+id/switch_close"/>

    </LinearLayout>
</ScrollView>