<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="left"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewValidationErrorMessage"
        style="@style/ErrorBoxStyle"
        android:layout_width="fill_parent"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/edittext_account_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_account_name"
        android:imeOptions="actionGo"
        android:inputType="text|textNoSuggestions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_contributors" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sample text" />

        <ImageButton
            android:id="@+id/imagebutton_contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_person_black_24dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_budget" />

    <EditText
        android:id="@+id/edit_text_budget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_account_budget"
        android:inputType="numberDecimal" />


    <Switch
        android:id="@+id/switch_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch" />

    <LinearLayout
        android:id="@+id/linear_layout_category"
        style="@style/TransactionEditorSectionStyle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_category" />

            <ListView
                android:id="@+id/list_view_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_view_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_chevron_right_black_24dp" />

    </LinearLayout>


</LinearLayout>
